[gd_scene load_steps=2 format=2]

[ext_resource path="res://cenaPause.gd" type="Script" id=1]

[node name="cenaPause" type="Node2D"]
script = ExtResource( 1 )

[node name="pauseOverlay" type="Node2D" parent="."]

[node name="pauseButton" type="Button" parent="pauseOverlay"]
margin_left = 79.0
margin_top = 45.0
margin_right = 154.0
margin_bottom = 112.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0.431373 )

[node name="voltarButton" type="Button" parent="CanvasLayer"]
margin_left = 459.0
margin_top = 346.0
margin_right = 613.0
margin_bottom = 469.0
rect_scale = Vector2( 7.60479, 1.86557 )
text = "VOLTAR"

[node name="quitButton" type="Button" parent="CanvasLayer"]
margin_left = 456.0
margin_top = 768.0
margin_right = 610.0
margin_bottom = 891.0
rect_scale = Vector2( 7.60479, 1.86557 )
text = "QUIT"

[connection signal="pressed" from="pauseOverlay/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/voltarButton" to="." method="_on_voltarButton_pressed"]
[connection signal="pressed" from="CanvasLayer/quitButton" to="." method="_on_quitButton_pressed"]
